--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+body {
+  padding: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* PRIMARY - #673ab7 */
+/* PRIMARY LIGHT - #9a67ea */
+/* PRIMARY DARK - #320b86 */
+
+/* SECONDARY - #1775d1 */
+/* SECONDARY LIGHT - #63a3ff */
+/* SECONDARY DARK - #004a9f */
+.app {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  padding: 15px;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app>div {
+  height: 100%;
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+video {
+  width: 100%;
+  height: 100%;
+}
+.VideoContainer{
+  width: 100%;
+  height: auto;
+  max-width: 460px;
+}
+
+h1 {
+  color: #673ab7;
+  margin: 0;
+}
+
+.flex-form-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-flow: column;
+  height: calc(100% - 22px);
+}
+
+.flex-form-container form {
+  padding: 0;
+  width: 100%;
+  max-width: 320px;
+}
+
+.flex-form-container form input {
+  width: 100%;
+  background: transparent;
+  border: 1px solid rgba(128, 128, 128, 0.363);
+  height: 35px;
+  border-radius: 5px;
+  margin-bottom: 7px;
+  padding: 0 15px;
+  box-sizing: border-box;
+}
+
+.flex-form-container form button {
+  padding: 12px 30px;
+  background-color: #673ab7;
   color: white;
+  border: none;
+  margin: auto;
+  display: block;
+  font-size: 18px;
+  border-radius: 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.flex-form-container video {
+  margin-top: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+@media(min-width: 680px) {
+  .flex-form-container {
+    flex-flow: row;
+    flex-direction: row-reverse;
   }
-  to {
-    transform: rotate(360deg);
+
+  .flex-form-container video {
+    margin-top: 0;
   }
+
+  .flex-form-container form {
+    padding: 15px;
+  }
+
 }
