--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,11 @@ body {
   left: 0;
   height: 100%;
   width: 100%;
-  padding: 15px;
   box-sizing: border-box;
+}
+
+.padding {
+  padding: 15px;
 }
 
 .app>div {
@@ -28,7 +31,8 @@ video {
   width: 100%;
   height: 100%;
 }
-.VideoContainer{
+
+.VideoContainer {
   width: 100%;
   height: auto;
   max-width: 460px;
@@ -79,7 +83,15 @@ h1 {
   margin-top: 30px;
 }
 
+.Meet {
+  background-color: black;
+  display: flex;
+  align-items: center;
+}
 
+.Meet video {
+  width: 50%;
+}
 
 @media(min-width: 680px) {
   .flex-form-container {
