--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ body {
 video {
   width: 100%;
   height: 100%;
+  transform: scaleX(-1);
 }
 
 .VideoContainer {
@@ -89,10 +90,20 @@ h1 {
   align-items: center;
 }
 
-.Meet video {
+.VideoDiv {
   width: 50%;
+  position: relative;
 }
-
+.VideoDiv .user-name{
+  color: white;
+  font-size: 22px;
+  font-weight: 800;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
 @media(min-width: 680px) {
   .flex-form-container {
     flex-flow: row;
